{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 6,
  "lineage": "ea8c6b8b-696a-95ca-0144-b2d41f2c70c8",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.192.48.1",
            "id": "projects/dt-sandbox-host-proj/regions/us-central1/subnetworks/dt-sandbox-service-proj-cluster-vpc-dev",
            "ip_cidr_range": "10.192.48.0/20",
            "name": "dt-sandbox-service-proj-cluster-vpc-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "private_ip_google_access": false,
            "project": "dt-sandbox-host-proj",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.192.64.0/20",
                "range_name": "services-range"
              },
              {
                "ip_cidr_range": "10.192.80.0/20",
                "range_name": "pod-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/regions/us-central1/subnetworks/dt-sandbox-service-proj-cluster-vpc-dev"
          }
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "ah"
              },
              {
                "ports": [],
                "protocol": "esp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "sctp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-10-04T13:26:07.775-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow pods to communicate with each other and the master",
            "destination_ranges": [
              "10.192.48.0/20",
              "10.192.80.0/20",
              "34.66.81.126/32"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dt-sandbox-host-proj/global/firewalls/gke-shared-vpc-clustermodule-intra-cluster-egress",
            "log_config": [],
            "name": "gke-shared-vpc-clustermodule-intra-cluster-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "priority": 1000,
            "project": "dt-sandbox-host-proj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/firewalls/gke-shared-vpc-clustermodule-intra-cluster-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-shared-vpc-clustermodule"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gke.data.google_compute_subnetwork.gke_subnetwork",
            "module.gke.data.google_compute_zones.available",
            "module.gke.data.google_container_engine_versions.region",
            "module.gke.data.google_container_engine_versions.zone",
            "module.gke.google_container_cluster.primary",
            "module.gke.google_service_account.cluster_service_account",
            "module.gke.random_shuffle.available_zones",
            "module.gke.random_string.cluster_service_account_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9443",
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-04T13:26:07.933-07:00",
            "deny": [],
            "description": "Managed by terraform gke module: Allow master to hit pods for admission controllers/webhooks",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dt-sandbox-host-proj/global/firewalls/gke-shared-vpc-clustermodule-webhooks",
            "log_config": [],
            "name": "gke-shared-vpc-clustermodule-webhooks",
            "network": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/networks/dt-sandbox-service-proj-shared-vpc",
            "priority": 1000,
            "project": "dt-sandbox-host-proj",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dt-sandbox-host-proj/global/firewalls/gke-shared-vpc-clustermodule-webhooks",
            "source_ranges": [
              "34.66.81.126/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-shared-vpc-clustermodule"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gke.data.google_compute_zones.available",
            "module.gke.data.google_container_engine_versions.region",
            "module.gke.data.google_container_engine_versions.zone",
            "module.gke.google_container_cluster.primary",
            "module.gke.google_service_account.cluster_service_account",
            "module.gke.random_shuffle.available_zones",
            "module.gke.random_string.cluster_service_account_suffix"
          ]
        }
      ]
    }
  ]
}